@@ -1,8 +1,10 @@
 Changelog
 ---------
 
-Head
-~~~~
+In next release
+
+- Added support for ``repoze.xmliter`` which allows reusing an
+  ``lxml`` document tree between middlewares. [malthe]
 
 - Media types for stylesheets are now taken into account when merging
   the resources. Squeze uses CSS2 `@media <type>` syntax. [jvloothuis]
